@@ -40,6 +40,7 @@ typedef struct __video_stream__ VideoStream;
 extern char VideoHardwareDecoder;	///< flag use hardware decoder
 extern char VideoIgnoreRepeatPict;	///< disable repeat pict warning
 extern int VideoAudioDelay;		///< audio/video delay
+extern char ConfigStartX11Server;	///< flag start the x11 server
 
 //----------------------------------------------------------------------------
 //	Prototypes
@@ -219,5 +220,8 @@ extern int VideoDecodeInput(VideoStream *);
 
     /// Get number of input buffers.
 extern int VideoGetBuffers(const VideoStream *);
+
+       /// Raise the frontend window
+extern int VideoRaiseWindow();
 
 /// @}
